--- a/views/about.ejs
+++ b/views/about.ejs
@@ -74,7 +74,7 @@
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">For Teachers</h1>
         <p class="lead">Your one-stop platform for teachers to access invigilation duties, view fees, and stay updated with the latest timetables, ensuring a smooth and organized academic schedule.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <form action="/login">
+          <form action="/teacherlogin">
           <input type="submit" value="Get Started" class="btn btn-primary btn-lg px-4 me-md-2">
         </form>
         </div>
