--- a/views/about.ejs
+++ b/views/about.ejs
@@ -58,7 +58,7 @@
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">For admin</h1>
         <p class="lead">As an admin, streamline your exam management with our intuitive platform. Easily allocate invigilators, create and manage exam timetables, and monitor completed duties.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <form action="/login">
+          <form action="/adminlogin">
             <input type="submit" value="Get Started" class="btn btn-primary btn-lg px-4 me-md-2">
           </form>
         </div>
